--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 .heading {
   text-transform: uppercase;
   font-size: 40px;
+  font-weight: 700;
   margin: 10px 0;
   color: white;
   z-index: 1;
